--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
+body{
+    background-image: url('https://static.vecteezy.com/ti/vetor-gratis/p3/26621526-4k-ultra-alto-definicao-moderno-minimo-geometrico-fundo-vermelho-dinamico-formas-elemento-usava-para-decoracao-ilustracao-pano-de-fundo-papel-de-parede-fundo-gratis-vetor.jpg');
+    background-repeat: no-repeat;
+    margin: 0;
+    background-size: cover;
+}
+
+
 .container{
+   
     text-align: center;
-    width: 500px;
+    width: 550px;
     padding: 50px;
     margin: 125px auto;
     border: 2px black solid; 
-    background-color: rgba(176, 179, 176, 0.37); 
+    background-color: rgba(241, 188, 72, 0.253);
     z-index: 1;
     position: relative;
     max-width: 1000px;
-    margin: 50px auto;
-    text-align: center;
+    border-radius: 15px;
     
 }
 table{
@@ -18,9 +26,10 @@ table{
     border-collapse: collapse;
 }
 th, tr, td{
-border: 1px solid #000;
-padding: 5px;
-text-align: center;
+    background-color: white;
+    border: 1px solid black;
+    padding: 15px;
+    text-align: center;
 }
 
 .banner{
@@ -42,24 +51,6 @@ text-align: center;
     
 
 }
-/* .banner .container{
-    position: relative;
-    z-index: 1;
-    max-width: 100px;
-    margin: 0 auto;
-    text-align: center;
-} */
-
-/* .cabecario{
- text-align: center;
- padding-top: 5px;
- position: fixed;
- background-color: purple;
- top: 0;
- left: 0;
- 
- 
-} */
 
 header{
     text-align: center;
@@ -83,4 +74,60 @@ width: 100%;
     padding-bottom: 0;
    height: 100px; 
    width: 100%;
+}
+header{
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 0;
+    background-color: rgba(241, 188, 72, 0.253);
+    width: 100%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    position: relative;
+    border: 2px black solid; 
+}
+footer{
+    text-align: center;
+    box-shadow: 0px 0px 0px rgb(0, 0, 0);
+    position: relative;
+    height: 100px;
+    padding-bottom: 0;
+    background-color: rgba(241, 188, 72, 0.253);
+    width: 100%;
+    padding-top: 10px;
+    border: 2px black solid; 
+}
+
+.button{
+    background-color: rgb(221, 56, 63);
+    border: 0;
+    border-radius: 100px;
+    box-shadow: white;
+    text-decoration: none;
+    color: white;
+    margin-bottom: 6px;
+    padding: 8px;
+}
+button{
+    background-color: rgb(221, 56, 63);
+    border: 0;
+    border-radius: 100px;
+    box-shadow: white;
+    text-decoration: none;
+    color: white;
+    margin-bottom: 6px;
+    padding: 8px;
+}
+
+.testo{
+    background-color: rgb(221, 56, 63);
+}
+textarea{
+    padding: 10px;
+    max-width: 500px;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 1px 1px 1px black;
 }
