--- a/style.css
+++ b/style.css
@@ -18,19 +18,22 @@ body{
     position: relative;
     max-width: 1000px;
     border-radius: 15px;
-
+    word-wrap: break-word;
+    line-break: auto;
     
 }
 
 .container-box{
     text-align: center;
-    width: 400px;
+    max-width: 650px;
+    min-width: 550px;
+    width: 650px;
     padding: 30px;
     margin: 20px auto;
     border: 2px black solid; 
     background-color: rgba(241, 188, 72, 0.253);
     z-index: 1;
-    position: relative;
+    
     max-width: 1000px;
     border-radius: 15px;
 
